DockerKubernetesExample/DockerKubernetesExample/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: dockerkubernetesexample
spec:
 type: NodePort
 selector:
   app: dockerkubernetesexample
 ports:
   - name: client
     protocol: TCP
     port: 80
     nodePort: 30880
 selector:
   app: dockerkubernetesexample
