DockerKubernetesExample/DockerKubernetesExample/Ingress.yaml
apiVersion: v1beta1
kind: Ingress
metadata:
  name: dockerkubernetesexample
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    #traefik.ingress.kubernetes.io/redirect-entry-point: https
    #traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: Ingress.test
    http:
      paths:
      - path: /
        backend:
          serviceName: dockerkubernetesexample
          servicePort: 80
